# SAvECMG

./: .gitignore  README.md  pyproject.toml
savecmg/envs/: base_env.py  custom_env.py  ex_env.py
savecmg/examples/: cmg_sim.py  ex.py  jacobian_derivative_sim.py  sc_aoc_loop_sim.py  sc_sim.py  singularities_3cmgs_sim.py  singularities_box_3cmgs_sim.py  singularities_pyramid_3cmgs_sim.py
savecmg/modules/: aoc.py  cmg.py  cmga.py  sc_body.py  storage.py  trajectory_generator.py  trajectory_manager.py
savecmg/simulations/: base_sim.py  ex_sim.py  null_torque_sim.py
savecmg/steering_algos/: base_algo.py  simple_steering.py  singularity_avoidance.py  singularity_escape.py
savecmg/trajectory_generator/: trajectory_generator.py
